k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aismb-health
  labels:
    app: aismb-health
